--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PAUL EPPS</title>
+		<title>Jang Chang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,14 +20,14 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<!-- <a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a> -->
-						<a href="http://github.com/paulepps" class="logo"><span>PAUL EPPS</span></a>
+						<a href="http://github.com/paulepps" class="logo"><span>Jang Chang</span></a>
 					</header>
 
 				<!-- Banner -->
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Paul Epps</h1>
+								<h1>Jang Chang</h1>
 							</header>
 							<div class="content">
 								<p>Teacher, Programmer, Author, Speaker, Seeker of Truth and Beauty</p>
@@ -75,7 +75,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://pauls-mern-bank.herokuapp.com/" class="link">Paul's Bank</a></h3>
+										<h3><a href="https://pauls-mern-bank.herokuapp.com/" class="link">Jang's Bank</a></h3>
 										<p>A personal banking web app with Plaid and the MERN stack </p>
 									</header>
 								</article>
@@ -93,7 +93,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://redwoodcodeacademy.github.io/accountownerclient" class="link">Paul's Brokerage</a></h3>
+										<h3><a href="https://redwoodcodeacademy.github.io/accountownerclient" class="link">Jang's Brokerage</a></h3>
 										<p>Full-stack app with React front-end consuming ASP.NET Web API deployed on Heroku in a Docker container</p>
 									</header>
 								</article>
@@ -173,7 +173,7 @@
 								<li><a href="https://www.linkedin.com/in/paulepps/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Paul Epps</li>
+								<li>&copy; Jang Chang</li>
 							</ul>
 						</div>
 					</footer>
