--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<h1>Jang Chang</h1>
 							</header>
 							<div class="content">
-								<p>Teacher, Programmer, Author, Speaker, Seeker of Truth and Beauty</p>
+								<p>VACATION STYLIST | TRIP PLANNER | JOURNEY INSPIRATION | SCUBA DIVER​ | Visited all 7 continents 80+ countries.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
@@ -168,8 +168,8 @@
 						<div class="inner">
 							<ul class="icons">
 
-								<li><a href="https://www.instagram.com/paulepps/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/paulepps/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.instagram.com/mrs_jang_chang/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/happyjang/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/paulepps/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
