--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Jang Chang</h1>
+								<h1>Jang </h1>
 							</header>
 							<div class="content">
 								<p>VACATION STYLIST | TRIP PLANNER | JOURNEY INSPIRATION | SCUBA DIVER​ | Visited all 7 continents 80+ countries.</p>
