--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<!-- <a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a> -->
-						<a href="http://github.com/paulepps" class="logo"><span>Jang Chang</span></a>
+						<a href="http://github.com/happyjang" class="logo"><span>Jang Chang</span></a>
 					</header>
 
 				<!-- Banner -->
@@ -66,7 +66,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://happyjang.github.io/hacker-news-clone/" class="link">Hacker News Reader</a></h3>
+										<h3><a href="https://happyjang.github.io/hacker-news-redux/" class="link">Hacker News Reader</a></h3>
 										<p>Project uses React, Redux, Axios, Styled Components and infinite scrolling to read and display the Hacker News API</p>
 									</header>
 								</article>
