--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 									<header class="major">
 										<h2>About</h2>
 									</header>
-									<p>I teach and use: JavaScript, React, Redux, HTML, CSS, Bootstrap, Node, Express, MongoDB, Mongoose, SQL, Entity Framework, REST, .NET Core, ASP.NET, Web API, AWS, Docker, Heroku, Agile and Scrum, algorithms, data structures, computer science concepts, and more.</p>
+									<p>Over 18 years of valuable experience in media and travel business. </p>
 								</div>
 							</section>
 
@@ -141,21 +141,21 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="mailto:paul@eppsnet.com">paul@eppsnet.com</a>
+										<a href="happyjang24@gmail.com">paul@eppsnet.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(714) 679-6149</span>
+										<span>(714) 204-8130</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span>Irvine, CA<br />
+										<span>Laguna Niguel, CA<br />
 										United States of America</span>
 									</div>
 								</section>
