--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 								<li><a href="https://www.instagram.com/mrs_jang_chang/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://github.com/happyjang/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/paulepps/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://linkedin.com/in/whatthanaphat-chang-0a671a19b/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Jang Chang</li>
