--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<h1>Jang Chang</h1>
 							</header>
 							<div class="content">
-								<p>VACATION STYLIST | TRIP PLANNER | JOURNEY INSPIRATION | SCUBA DIVER​ | Visited all 7 continents 80+ countries.</p>
+								<p>VACATION STYLIST | TRIP PLANNER | JOURNEY INSPIRATION | SCUBA DIVER​ | Visited 7 continents 80+ countries.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
@@ -141,7 +141,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="happyjang24@gmail.com">paul@eppsnet.com</a>
+										<a href="happyjang24@gmail.com">happyjang24@gmail.com</a>
 									</div>
 								</section>
 								<section>
