--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="happyjang24@gmail.com"><happyjang24@gmail.com</a>
+										<a href="happyjang24@gmail.com"></a>
 									</div>
 								</section>
 								<section>
