--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/calc.jpg" alt="" />
+										<img src="images/game.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://codepen.io/redwoodcodeacademy-the-encoder/full/dyMjvrN" class="link">JavaScript Calculator</a></h3>
-										<p>&nbsp;</p>
+										<h3><a href="https://agitated-wright-afbfcc.netlify.app/" class="link">Blazor Games</a></h3>
+										<p>Minesweeper and Connect Four implemented with ASP.NET Core and Blazor</p>
 									</header>
 								</article>
 								<article>
