--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://jangbank.herokuapp.com/" class="link">Jang's Bank</a></h3>
-										<p>A personal banking web app with Plaid and the MERN stack. Deployed on Heroku, whick can take 20-30 seconds to "wake up." Please be patient! </p>
+										<p>A personal banking web app with Plaid and the MERN stack. Deployed on Heroku, which can take 20-30 seconds to "wake up." Please be patient! </p>
 									</header>
 								</article>
 								<article>
@@ -90,11 +90,11 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/company-employees.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://redwoodcodeacademy.github.io/accountownerclient" class="link">Jang's Brokerage</a></h3>
-										<p>Full-stack app with React front-end consuming ASP.NET Web API deployed on Heroku in a Docker container</p>
+										<h3><a href="https://companyemployeesbyjang.herokuapp.com/swagger/" class="link">Company Employees</a></h3>
+										<p>ASP.NET Web API deployed on Heroku in a Docker container which can take 20-30 seconds to "wake up." Please be patient!</p>
 									</header>
 								</article>
 							</section>
