--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Jang Chang</title>
+		<title>Whatthanaphat Chang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<!-- <a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a> -->
-						<a href="http://github.com/happyjang" class="logo"><span>Jang Chang</span></a>
+						<a href="http://github.com/happyjang" class="logo"><span>Whatthanaphat Chang</span></a>
 					</header>
 
 				<!-- Banner -->
@@ -30,7 +30,7 @@
 								<h1>Jang Chang</h1>
 							</header>
 							<div class="content">
-								<p>VACATION STYLIST | TRIP PLANNER | JOURNEY INSPIRATION | SCUBA DIVER​ | Visited 7 continents 80+ countries.</p>
+								<p>I am a full stack software engineer with a strong passion for learning, creativity, and the desire to take on new challenges. </p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
@@ -105,7 +105,7 @@
 									<header class="major">
 										<h2>About</h2>
 									</header>
-									<p>Over 18 years of valuable experience in media and travel business. </p>
+									<p>Certificate of Graduation, Full Stack Immersion Course from Radwood Code Academy</p>
 								</div>
 							</section>
 
@@ -173,7 +173,7 @@
 								<li><a href="https://linkedin.com/in/whatthanaphat-chang-0a671a19b/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Jang Chang</li>
+								<li>&copy; Whatthanaphat Chang</li>
 							</ul>
 						</div>
 					</footer>
