--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Jang Chang</h1>
+								<h1>Whatthanaphat Chang</h1>
 							</header>
 							<div class="content">
 								<p>I am a full stack software engineer with a strong passion for learning, creativity, and the desire to take on new challenges. </p>
@@ -105,7 +105,7 @@
 									<header class="major">
 										<h2>About</h2>
 									</header>
-									<p>Certificate of Graduation, Full Stack Immersion Course from Radwood Code Academy</p>
+									<p>Certificate of Graduation, Full Stack Immersion Course from Redwood Code Academy.</p>
 								</div>
 							</section>
 
