--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
 									<header class="major">
 										<h2>About</h2>
 									</header>
-									<p>Certificate of Graduation, Full Stack Immersion Course from Redwood Code Academy.</p>
+									<p>I am a software engineer with a proven ability to deliver quality results in both creative and collaborative settings. Prior to transitioning to software development, I was an assistant program director in the number 1 radio station in Thailand for 10+ years. I used my creativity to develop radio content and marketing strategies to maintain the highest rating with more than 1M audiences per hour and the highest advertising revenue of 60% in market share. 
+										I am passionate about creativity and collaboration for software development. Embracing this passion led me to graduate from a 1,000+ hour coding bootcamp, which focused on JavaScript, React, and Node.js. I am eager to bring my work ethic and team-first mentality to a collaborative, innovative engineering team, wherein I can continue to contribute on a high functioning, results-driven team.
+										</p>
 								</div>
 							</section>
 
@@ -146,17 +148,16 @@
 								</section>
 								<section>
 									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(714) 204-8130</span>
+										<span class="icon brands alt fa-github"></span>
+										<h3>GitHub</h3>
+										<a href="https://github.com/happyjang">https://github.com/happyjang</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>Laguna Niguel, CA<br />
-										United States of America</span>
+										<span class="icon brands alt fa-linkedin-in"></span>
+										<h3>LinkedIn</h3>
+										<a href="https://www.linkedin.com/in/hellojangchang">https://www.linkedin.com/in/hellojangchang</a>
 									</div>
 								</section>
 							</section>
@@ -168,12 +169,12 @@
 						<div class="inner">
 							<ul class="icons">
 
-								<li><a href="https://www.instagram.com/mrs_jang_chang/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="mailto:happyjang24@gmail.com/" class="icon solid alt fa-envelope"><span class="label">Instagram</span></a></li>
 								<li><a href="https://github.com/happyjang/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://linkedin.com/in/hellojangchang/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Whatthanaphat Chang</li>
+								<li>&copy; Whatthanaphat Chang </li>
 							</ul>
 						</div>
 					</footer>
