--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<p>Project uses React, Redux, Axios, Styled Components and infinite scrolling to read and display the Hacker News API</p>
 									</header>
 								</article>
-								<article>
+								<!-- <article>
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
@@ -78,7 +78,7 @@
 										<h3><a href="https://jangbank.herokuapp.com/" class="link">Jang's Bank</a></h3>
 										<p>A personal banking web app with Plaid and the MERN stack. Deployed on Heroku, which can take 20-30 seconds to "wake up." Please be patient! </p>
 									</header>
-								</article>
+								</article> -->
 								<article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
@@ -88,7 +88,7 @@
 										<p>A single page note taking application powered by a serverless API written completely in JavaScript and hosted on AWS.</p>
 									</header>
 								</article>
-								<article>
+								<!-- <article>
 									<span class="image">
 										<img src="images/company-employees.jpg" alt="" />
 									</span>
@@ -96,7 +96,7 @@
 										<h3><a href="https://companyemployeesbyjang.herokuapp.com/swagger/" class="link">Company Employees</a></h3>
 										<p>ASP.NET Web API deployed on Heroku in a Docker container which can take 20-30 seconds to "wake up." Please be patient!</p>
 									</header>
-								</article>
+								</article> -->
 							</section>
 
 						<!-- Two -->
