--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
 										<p>Project uses React, Redux, Axios, Styled Components and infinite scrolling to read and display the Hacker News API</p>
 									</header>
 								</article>
-								<!-- <article>
+								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/pic12.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://jangbank.herokuapp.com/" class="link">Jang's Bank</a></h3>
-										<p>A personal banking web app with Plaid and the MERN stack. Deployed on Heroku, which can take 20-30 seconds to "wake up." Please be patient! </p>
+										<h3><a href="https://happyjang.github.io/Little-Lemon-Restaurant" class="link">Little Lemon Restaurant</a></h3>
+										<p>Final capstone project for Meta Front-end developer program on Coursera, which contains a detailed and responsive website with table-booking functionality built using React. </p>
 									</header>
-								</article> -->
+								</article>
 								<article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
@@ -88,15 +88,15 @@
 										<p>A single page note taking application powered by a serverless API written completely in JavaScript and hosted on AWS.</p>
 									</header>
 								</article>
-								<!-- <article>
+								<article>
 									<span class="image">
 										<img src="images/company-employees.jpg" alt="" />
 									</span>
-									<header class="major">
+									<!-- <header class="major">
 										<h3><a href="https://companyemployeesbyjang.herokuapp.com/swagger/" class="link">Company Employees</a></h3>
 										<p>ASP.NET Web API deployed on Heroku in a Docker container which can take 20-30 seconds to "wake up." Please be patient!</p>
-									</header>
-								</article> -->
+									</header> -->
+								</article>
 							</section>
 
 						<!-- Two -->
